git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@251 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2365-Constraint_programming/Assignment3/report/document.tex
+++ b/LINGI2365-Constraint_programming/Assignment3/report/document.tex
@@ -300,6 +300,8 @@ boolean check(int a, int b)
 
 \subsubsection{Test both implementations of alldifferent}
 
+The comparison table from our tests can be found in the answer to the next question. 
+
 \subsubsection{What did you find in your comparative study?}
 Here are the obtained numbers of failures and choices for the problems for each value of n. 
 \begin{center}
