--- a/LINGI2132-Langages_et_traducteurs/interpreter/TODO
+++ b/LINGI2132-Langages_et_traducteurs/interpreter/TODO
@@ -14,3 +14,6 @@ When sending a message the environment is a new environment(local to the message
 things to do : 
 - environment : when initialized create a stdio object with stdio as id...
 - messageClass should exist even if it doesn't do anything right now...
+
+
+what if we send a object that is a son of the MessageObject
