added jar file to execute test out of eclise

--- a/LINGI2132-Langages_et_traducteurs/interpreter/report/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/interpreter/report/document.tex
@@ -53,6 +53,7 @@ What we did is that the postal obbjects data si stored in e java PostalObject wh
 \section{Tests}
 
 We have built some basic syntaxics trees of shorts programs. Going from an "hello world" equivalent in our language (wich prints 42 instead of "hello world" since we only have numeric values at this point) to a basic while loop incrementing an integer and printing the values. \\ 
-These tests trees are built and executed in the "test.java" file. For each we print the corresponding program then the result of the execution of the syntexic tree. 
+These tests trees are built and executed in the "test.java" file. For each we print the corresponding program then the result of the execution of the syntexic tree. \\ 
+For ease of use, the "test.java" is available with the other needed classes in a execuatable jar file. To run it simply use "java -jar postalTest.jar".
 
 \end{document}
