--- a/LINGI2365-Constraint_programming/Assignment4/report/document.tex
+++ b/LINGI2365-Constraint_programming/Assignment4/report/document.tex
@@ -104,7 +104,50 @@ All of our heuristic perform a lot better than labelFF but the second and third 
 \subsection{A branch and bound approach} %5pt
 
 \subsubsection{Model description}
+In our model we use a boolean variable $x_i$ for each object to represent the fact that the object is placed in the sack or not. We then define the objective function as  $\sum_{i \in N} x_ia_i$ and post a constraint such as $\sum_{i \in N}x_iw_i \le b$. This corresponds to the following in comet : 
+\begin{lstlisting}
+var<CP>{int} objectsTaken[O](cp, 0..1);         
+
+maximize<cp>
+    sum(o in O)(objectsTaken[o]*oUsefullness[o])
+subject to{
+    cp.post(sum(o in O)(objectsTaken[o]*oWeight[o])<=knapsackCapacity);
+}
+\end{lstlisting}
+
 \subsubsection{4 different heuristics for variable selection}
+\begin{itemize}
+	\item \textbf{First heuristic} \\ 
+		Our first heuristic consist of starting with the most usefull objects. Then we try to take them in the sack. \\ 
+		Here is what we put in the using part of our comet program to use this heuristic :
+		\begin{lstlisting}
+            forall (o in O: !objectsTaken[o].bound()) by (-oUsefullness[o])
+                tryall<cp>(v in 0..1: objectsTaken[o].memberOf(v)) by (-v)
+                {
+                    label(objectsTaken[o], v);
+                } 		\end{lstlisting}
+	\item \textbf{Second heuristic} \\ 
+		The second heuristic is based on the same idea as the first except now it choses objects that have the greatest $usefullness/weight$ ratio instead. This way we try to start by packing the objects that are both usefull and light first. \\ 
+				Here is what we put in the using part of our comet program to use this heuristic :
+		\begin{lstlisting}
+		forall (o in O: !objectsTaken[o].bound()) by (-oUsefullness[o]/oWeight[o])
+                tryall<cp>(v in 0..1: objectsTaken[o].memberOf(v)) by (-v)
+                {
+                    label(objectsTaken[o], v);
+                } 
+		\end{lstlisting}
+	\item \textbf{Third heuristic} \\ 
+				Here is what we put in the using part of our comet program to use this heuristic :
+		\begin{lstlisting}
+			%todo
+		\end{lstlisting}
+	\item \textbf{Fourth heuristic} \\ 
+				Here is what we put in the using part of our comet program to use this heuristic :
+		\begin{lstlisting}
+			%todo
+		\end{lstlisting}
+	
+\end{itemize}
 \subsubsection{Heuristics tests} %also with labelFF
 
 \subsection{Optimization over iterations} %5pt
